--- a/commerceApp/build.gradle
+++ b/commerceApp/build.gradle
@@ -20,10 +20,14 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     runtimeOnly 'mysql:mysql-connector-java'
     compile group: 'org.modelmapper', name: 'modelmapper', version: '2.3.6'
+    //For password validation
+    compile group: 'org.passay', name: 'passay', version: '1.0'
+    compile group: 'com.google.guava', name: 'guava', version: 'r05'
 
     implementation 'org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.2.5.RELEASE'
     compile group: 'org.hibernate', name: 'hibernate-core', version: '5.4.0.Final'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.8'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-mail'
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
