--- a/commerceApp/src/main/resources/application.properties
+++ b/commerceApp/src/main/resources/application.properties
@@ -13,3 +13,10 @@ spring.jpa.hibernate.ddl-auto=create
 # to enable sql logging of queries
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=ameeshaswaroop@gmail.com
+spring.mail.password=Felixkjelberg14
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.jkjhjujhjhj.smtp.starttls.enable=true
