--- a/commerceApp/src/main/resources/application.properties
+++ b/commerceApp/src/main/resources/application.properties
@@ -1,12 +1,22 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/commerce
+
+spring.datasource.url=jdbc:mysql://localhost/commerce
 spring.datasource.username=root
 spring.datasource.password=igdefault
-spring.jpa.show.sql=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+server.port=8080
 
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-# Hibernate ddl auto (create, create-drop, validate, update)
-#spring.jpa.hibernate.ddl-auto = update
-spring.jpa.hibernate.ddl-auto =create
+# for database auto creation
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
 
+# to enable sql logging of queries
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=ameeshaswaroop@gmail.com
+spring.mail.password=Felixkjelberg14
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.jkjhjujhjhj.smtp.starttls.enable=true
