most of product apis

--- a/commerceApp/src/main/resources/application.properties
+++ b/commerceApp/src/main/resources/application.properties
@@ -17,6 +17,6 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=ameeshaswaroop@gmail.com
-spring.mail.password=Felixkjelberg14
+spring.mail.password=Felixkjelberg@14p
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.jkjhjujhjhj.smtp.starttls.enable=true
