--- a/commerceApp/src/main/resources/application.properties
+++ b/commerceApp/src/main/resources/application.properties
@@ -8,7 +8,8 @@ server.port=8080
 
 # for database auto creation
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
+
 
 # to enable sql logging of queries
 spring.jpa.show-sql=true
