--- a/commerceApp/build.gradle
+++ b/commerceApp/build.gradle
@@ -13,7 +13,7 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+   /* implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -28,8 +28,28 @@ dependencies {
     compile group: 'org.hibernate', name: 'hibernate-core', version: '5.4.0.Final'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.8'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-mail'
+    // for swagger
+    //
+   compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
+    compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
+
+//	for jackson and swagger
+  //  compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.11.0.rc1'
+    //compile 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.10.2'
+    //compile 'io.springfox:springfox-swagger-ui:2.4.0'
+    //compile 'io.springfox:springfox-swagger2:2.4.0'
+    //test
+    compile group: 'org.springframework.plugin', name:'spring-plugin-core', version:'1.2.0.RELEASE'
+    //t2
+    // https://mvnrepository.com/artifact/com.google.guava/guava
+   // compile group: 'com.google.guava', name: 'guava', version: '19.0'
+    //for jackson and swagger
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.11.0.rc1'
+    compile 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.10.2'
     compile 'io.springfox:springfox-swagger-ui:2.4.0'
     compile 'io.springfox:springfox-swagger2:2.4.0'
+
+
 
 //	for patch request purpose.
     compile group: 'com.github.java-json-tools', name: 'json-patch', version: '1.12'
@@ -42,3 +62,46 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+    */
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    runtimeOnly 'mysql:mysql-connector-java'
+
+
+    implementation 'org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.2.5.RELEASE'
+
+
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.11.0.rc1'
+    compile 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.10.2'
+    compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
+    compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
+
+
+    compile group: 'com.github.java-json-tools', name: 'json-patch', version: '1.12'
+
+
+
+    compile group: 'org.modelmapper', name: 'modelmapper', version: '2.3.6'
+
+
+    compile group: 'org.passay', name: 'passay', version: '1.0'
+
+
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-mail'
+
+
+
+    testImplementation('org.springframework.boot:spring-boot-starter-test') {
+        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+    }
+    testImplementation 'org.springframework.security:spring-security-test'
+}
+
+test {
+    useJUnitPlatform()
+}
+
