Auditing info added

--- a/commerceApp/src/main/resources/application.properties
+++ b/commerceApp/src/main/resources/application.properties
@@ -21,3 +21,6 @@ spring.mail.username=ameeshaswaroop@gmail.com
 spring.mail.password=Felixkjelberg14p
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.jkjhjujhjhj.smtp.starttls.enable=true
+
+#logging
+logging.file = /var/tmp/mylog.log
