--- a/commerceApp/build.gradle
+++ b/commerceApp/build.gradle
@@ -82,6 +82,8 @@ test {
 
 
     compile group: 'com.github.java-json-tools', name: 'json-patch', version: '1.12'
+    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-redis
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-redis', version: '2.2.5.RELEASE'
 
 
 
