--- a/commerceApp/src/main/resources/application.properties
+++ b/commerceApp/src/main/resources/application.properties
@@ -24,3 +24,19 @@ spring.mail.properties.jkjhjujhjhj.smtp.starttls.enable=true
 
 #logging
 logging.file = /var/tmp/mylog.log
+# Redis Config
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.password=
+
+spring.redis.lettuce.pool.max-active=7 
+spring.redis.lettuce.pool.max-idle=7
+spring.redis.lettuce.pool.min-idle=2
+spring.redis.lettuce.pool.max-wait=-1ms
+spring.redis.lettuce.shutdown-timeout=200ms
+
+spring.cache.redis.cache-null-values=false
+spring.cache.redis.time-to-live=600000
+spring.cache.redis.use-key-prefix=true
+
+spring.cache.type=redis
