--- a/commerceApp/build.gradle
+++ b/commerceApp/build.gradle
@@ -90,6 +90,9 @@ test {
     // https://mvnrepository.com/artifact/org.apache.commons/commons-pool2
     compile group: 'org.apache.commons', name: 'commons-pool2', version: '2.0'
 
+   //mongo
+// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-mongodb
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-mongodb', version: '2.2.6.RELEASE'
 
 
     compile group: 'org.modelmapper', name: 'modelmapper', version: '2.3.6'
