--- a/commerceApp/src/main/resources/application.properties
+++ b/commerceApp/src/main/resources/application.properties
@@ -40,3 +40,8 @@ spring.cache.redis.time-to-live=600000
 spring.cache.redis.use-key-prefix=true
 
 spring.cache.type=redis
+#mongo
+spring.data.mongodb.database=commerce
+spring.data.mongodb.port=27017
+spring.data.mongodb.host=localhost
+spring.data.mongodb.repositories.enabled=true
