--- a/commerceApp/src/main/resources/application.properties
+++ b/commerceApp/src/main/resources/application.properties
@@ -45,3 +45,6 @@ spring.data.mongodb.database=commerce
 spring.data.mongodb.port=27017
 spring.data.mongodb.host=localhost
 spring.data.mongodb.repositories.enabled=true
+
+
+spring.thymeleaf.enabled=true
