--- a/commerceApp/build.gradle
+++ b/commerceApp/build.gradle
@@ -46,6 +46,10 @@ dependencies {
     //envers
     // https://mvnrepository.com/artifact/org.hibernate/hibernate-envers
     compile group: 'org.hibernate', name: 'hibernate-envers', version: '5.4.12.Final'
+    //test
+    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-test
+    testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.2.6.RELEASE'
+
 
 
 
